letter spacing fix2

--- a/css/121213.css
+++ b/css/121213.css
@@ -100,7 +100,7 @@ strong{
 
 super{
     font-size: 200px;
-    letter-spacing: -14px;
+    letter-spacing: -10px;
 }
 
 i, em { font-style: italic; }
